[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]                            
bytes = "1.10.1"                                  
thiserror = "1.0.38"                         
anyhow = "1.0.100"                                                    
clap = { version = "4.5.53", features = ["derive"] }        

