[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]                            
bytes = "1.11.1"                                  
thiserror = "2.0.18"                                                                           
clap = { version = "4.5.58", features = ["derive"] }        
anyhow = "1.0.101"                                                       


